--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# general things to ignore
+build/
+dist/
+.venv/
+.direnv/
+*.egg-info/
+*.egg
+*.py[cod]
+__pycache__/
+*.so
+*~≈
 .env
-test.py
-__pycache__
+.envrc
+.python-version
+.idea
+.pytest_cache
+
+# due to using tox and pytest
+.tox
+.cache
+.mypy_cache
